<resources>
    <string name="app_name">RPGHelper</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_session_name">Session name</string>
    <string name="hint_item_name">Item name</string>
    <string name="hint_item_cost">Cost</string>
    <string name="hint_item_weight">Weight</string>
    <string name="currency_short">G</string>
    <string name="weight_measuring_value">kg</string>
    <string name="Description"/>
    <string name="money">%1$d G</string>
    <string name="weight">%1$.2f kg</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_equip">Equip/Take off</string>
    <string name="menu_cancel">Clear</string>
    <string name="change_money_by">Change money by</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
</resources>
