<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".screens.AddInventoryItemFragment"
                                                   android:id="@+id/frameLayout3">
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/item_name" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="32dp"
            android:hint="@string/hint_item_name"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number|textPersonName"
            android:ems="10"
            android:id="@+id/item_cost" android:layout_marginTop="32dp"
            app:layout_constraintWidth_percent="0.4"
            app:layout_constraintTop_toBottomOf="@+id/item_name" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:hint="@string/hint_item_cost"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/item_weight"
            app:layout_constraintWidth_percent="0.4"
            android:hint="@string/hint_item_weight" app:layout_constraintBaseline_toBaselineOf="@+id/item_cost"
            app:layout_constraintEnd_toStartOf="@+id/textView2"/>
    <TextView
            android:text="@string/currency_short"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/currency" app:layout_constraintStart_toEndOf="@+id/item_cost"
            app:layout_constraintBaseline_toBaselineOf="@+id/item_cost"/>
    <TextView
            android:text="@string/weight_measuring_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/item_weight"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/item_description" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/item_cost" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:hint="@string/Description"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:src="@android:drawable/checkbox_on_background"
            android:layout_width="68dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:id="@+id/apply_changes" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp" android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>